src/layouts/PageContentBox/PageContentBox.module.css
.wrapper {
  position: relative;
  background: #ffffff;
  padding: var(--spacing-16);
  border: 1px solid #ebedf0;
  border-radius: 8px;
  margin-bottom: calc(var(--spacing-8) + var(--spacing-4));
  width: 100%;
}
.wrapper > h4 {
  /* font-family: 'Poppins'; */
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  color: #000000;
  margin-bottom: var(--spacing-16);
}

.wrapper > div {
  /* font-family: 'Poppins'; */
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.04em;
  color: #08090a;
}
.wrapper > div:not(:last-child) {
  /* margin-bottom: var(--spacing-24); */
}

.wrapper .edit-btn {
  position: absolute;
  top: 1rem;
  right: 1rem;
  cursor: pointer;
}

.dropdown-icon{
  position: absolute;
  top: 1rem;
  right: 1rem;
  width: 20px;
  height: 20px;
  display: none;
  transform: rotate(0deg) scale(1.25);
  transition: all 0.3s ease;
}

.display-initial{
  display: initial !important;
}

.rotate-180deg{
  transform: rotate(180deg) scale(1.25);
}

.edit-icon-without-dropdown{
  right: 1rem !important;
  display: initial !important;
}
@media screen and (max-width: 1100px) {
  .wrapper{
    margin-bottom:0;
    border-radius: 0;
  }
  .dropdown-icon{
    display: initial;
  }
  .wrapper .edit-btn{
    right: 3.5rem;
    display: none;
  }
  .wrapper > h4 {
    margin-bottom:0;
  }
}

